--- a/reference.bib
+++ b/reference.bib
@@ -142,6 +142,20 @@
 	file = {[PDF] stanford.edu:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\4NJIMFAK\\Man et al. - 2002 - Survey and Alignment of HIRFL-CSR at IMP.pdf:application/pdf}
 }
 
+@misc{_particle_????,
+	title = {Particle accelerator},
+	url = {https://en.wikipedia.org/wiki/Particle_accelerator}
+}
+
+@techreport{moller_beam-residual_1999,
+	title = {Beam-residual gas interactions},
+	url = {http://cds.cern.ch/record/455561/files/p155.ps.gz},
+	urldate = {2016-11-14},
+	institution = {CERN},
+	author = {Møller, P.},
+	year = {1999}
+}
+
 @book{lee_accelerator_2011,
 	address = {Singapore},
 	edition = {3},
@@ -404,6 +418,27 @@
 	author = {Tamura, Fumihiko and Schnase, Alexander and Nomura, Masahiro and Yamamoto, Masanobu and Hasegawa, Katsushi},
 	year = {2006},
 	file = {WP64.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\IAUGSD7H\\WP64.html:text/html}
+}
+
+@inproceedings{petzenhauser_concept_2016,
+	address = {Busan, Korea,},
+	title = {Concept and {Design} of the {Injection} {Kicker} {System} for the {FAIR} {SIS}100 {Synchrotron}},
+	booktitle = {{IPAC}},
+	publisher = {JACOW, Geneva, Switzerland},
+	author = {Petzenhauser, Isfried and Baandrup, Leif and Bach, Henning and Blell, Udo and Blokesch, Guido and Hauge, Nils and Laurberg, Kim and Osemann, Michael and Spiller, Peter},
+	year = {2016},
+	pages = {3582--3584},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XWSIGMUQ\\Petzenhauser et al. - 2016 - Concept and Design of the Injection Kicker System .pdf:application/pdf}
+}
+
+@techreport{wang_design_1991,
+	title = {Design of kicker magnet and power supply unit for synchrotron beam injection},
+	url = {http://www.nrs2005.aps.anl.gov/Science/Publications/lsnotes/content/files/APS_1417781.pdf},
+	urldate = {2016-11-10},
+	institution = {Argonne National Lab},
+	author = {Wang, Ju},
+	year = {1991},
+	file = {[PDF] anl.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\22DK57IQ\\Wang - 1991 - Design of kicker magnet and power supply unit for .pdf:application/pdf}
 }
 
 @article{klingbeil_new_2011,
