Application add explanation of subharmonic

--- a/main.tex
+++ b/main.tex
@@ -752,6 +752,10 @@ description={Large Hadron Collider at CERN},type=abbreslist
 name={PSB},
 description={Proton Synchrotron Booster at CERN},type=abbreslist
 }
+\newglossaryentry{RIB}{
+name={RIB},
+description={Rare Isotope Beams},type=abbreslist
+}
 \newglossaryentry{PS}{
 name={PS},
 description={Proton Synchrotron at CERN},type=abbreslist
@@ -1367,7 +1371,7 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 \input{chapters/3Technical_basis}
 \chapter{Concept of the FAIR B2B transfer system}
 \input{chapters/4Concept}
-\chapter{Application of the FAIR B2B transfer system for FAIR accelerators}
+\chapter{Application of the FAIR B2B transfer system for FAIR accelerators}\label{application}
 \input{chapters/Application}
 \chapter{Realization and systematic investigation of the FAIR B2B transfer system}
 \input{chapters/5Realization}
