--- a/main.tex
+++ b/main.tex
@@ -1379,9 +1379,9 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 \input{chapters/2Background}
 %\chapter{First idea on the B2B transfer system}
 %\input{chapters/3Firstconcept}
-\chapter{Technical basis for the B2B transfer system}
+\chapter{Technical basis for the B2B transfer system}\label{technical}
 \input{chapters/3Technical_basis}
-\chapter{Concept of the FAIR B2B transfer system}
+\chapter{Concept of the FAIR B2B transfer system}\label{concept}
 \input{chapters/4Concept}
 \chapter{Application of the FAIR B2B transfer system for FAIR accelerators}\label{application}
 \input{chapters/Application}
